--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <input type="text" id="auth-nick" placeholder="昵称">
         <input type="password" id="auth-pw" placeholder="密码">
         <div style="display:flex; gap:10px;">
-            <button class="btn-rule" style="flex:1" onclick="SurvivalAuth.login()">连接</button>
+            <button class="btn-rule" style="flex:1" onclick="SurvivalAuth.login()">登陆</button>
             <button class="btn-rule" style="flex:1" onclick="SurvivalAuth.register()">注册</button>
         </div>
     </div></div>
