--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
             if (uid === "Peter_YT_Bilibili" || uid === "Peter") return `<span class="tag tag-ffz">[副腐竹]</span>`;
             if (uid === "111" || nick === "焦糖猫" || nick === "CS||Steve") return `<span class="tag tag-mod">[Discord开发/管理员]</span>`;
             if (nick === "GhastlyCyclops_432") return `<span class="tag tag-mod">[服务器建筑师]</span>`;
-            if (nick === "Peter_YYDS") return `<span class="tag tag-mod">[Boxim群主/管理员]</span>`;
+            if (uid === "Peter_YYDS") return `<span class="tag tag-mod">[Boxim群主/管理员]</span>`;
             return "";
         }
 
