--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: url('你的图片路径.jpg'); /* 请替换为你的图片实际路径 */
+            background: url('生存法则图标.jpg'); /* 请替换为你的图片实际路径 */
             background-size: cover;
             opacity: 0;
             mix-blend-mode: screen;
