Add favicon link to index.html

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
     <meta name="description" content="生存法则 (Survival Rule) - Bloxd.io 服务器官方中继站。提供实时聊天、物资交易、好友系统、悬赏中心及荣誉排行。">
     <meta name="keywords" content="Bloxd.io, 生存法则, Survival Rule, 游戏社区, 物资交易">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&family=Noto+Sans+SC:wght@300;700&display=swap" rel="stylesheet">
+    <link rel="icon" href="favicon.png" type="image/png">
+    
+     <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&family=Noto+Sans+SC:wght@300;700&display=swap" rel="stylesheet">
     
     <style>
         :root {
